@@ -704,7 +704,7 @@ _mullong (long a, long b)
    2009, by M.Bodrato ( http://bodrato.it/ )
 
    z80 and gbz80 don't have any hardware multiplication.
-   r2k and r3k ave 16x16 hardware multiplication.
+   r2k and r3k have 16x16 hardware multiplication.
  */
 long
 _mullong (long a, long b)
