@@ -1,3 +1,15 @@
+2013-07-23 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCralloc.hpp,
+	  src/hc08/ralloc2.cc,
+	  src/stm8/ralloc2.cc
+	  src/stm8/gen.h,
+	  src/stm8/gen.c,
+	  src/z80/ralloc2.cc:
+	  Consider ifx optimization in register allocation.
+	* device/lib/_mullong.c:
+	  Fix typo in comment.
+
 2013-07-23 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* src/hc08/gen.c (genLeftShift,genRightShift): fixed bug in shifting
